# d-bot-m2m-communication

./: .gitignore  CMakeLists.txt  README.md  catkin_env.sh.sample  communication.launch  package.xml  setup.py
src/: .env.sample  beacon_communication.py  beacon_test.py  crane_communication.py  crane_tester.py  elevator_communication.py  elevator_tester.py  ilmatar_publisher.py  kone_publisher.py  noccela_publisher.py
src/beacon/: buzzerUtil.py
src/beacon/api/: oauth2Token.py  status.py
src/beacon/services/: authenticationService.py  deviceService.py  serviceUtil.py  websocketService.py
src/ilmatar/services/: ilmatarAuthenticationService.py
src/kone/api/: elevatorCall.py  status.py
src/kone/services/: authenticationService.py  elevatorService.py  koneAuthenticationService.py
src/noccela/services/: deviceService.py  infoService.py  noccelaAuthenticationService.py  websocketService.py
src/resources/: .env.sample
srv/: CraneTaskCall.srv  Position.srv  Status.srv
